バージョンの修正

--- a/ethereum/06. ethers.js.md
+++ b/ethereum/06. ethers.js.md
@@ -2,7 +2,7 @@
 
 ethereum RPC の ラッピングクライアントの使い方
 
-2025/02/07
+2025/02/20
 Shigeichiro Yamasaki
 
 ## 前提条件
@@ -39,11 +39,11 @@ Shigeichiro Yamasaki
 
 ethereum RPC の基本要素を javaSCript オブジェクトにしたものです
 
-* Provider :  ethereum ネットワークに接続してブロックチェーンの状態やイベントログを参照（読み取り専用）
+* Provider :  ethereum ネットワークに接続して，ブロックチェーンの状態の参照やイベントログを参照することができる（読み取り専用）
 * Signer : アカウントに関する操作を行う．秘密鍵を使用した処理ができる（ワレットなどによる承認が必要）
-* Transaction:トランザクションの実行と更新された情報の取得
+* Transaction :トランザクションの実行と更新された情報の取得
 * Contract :  特定のコントラクトを javaScriptオブジェクトにしたもの
-* Receipt: トランザクションがブロックに格納されるとレシートが利用可能になる．トランザクションが格納されたブロックや消費したガスや発生したイベントなどの情報を得ることができる
+* Receipt: トランザクションがブロックに格納されるとそのトランザクションのレシートが利用可能になる．トランザクションが格納されたブロックや消費したガスや発生したイベントなどの情報を得ることができる
 
 
 ### Provider
@@ -83,7 +83,7 @@ HardhatEthersProvider {
 
 * 残高の確認
   
-metamask で確認したアカウントのアドレスが `0x8626f6940E2eb28930eFb4CeF49B2d1F2C9C1199` のとき
+EOAのアドレスが `0x8626f6940E2eb28930eFb4CeF49B2d1F2C9C1199` のとき
 
 ```js
 > await ethers.provider.getBalance('0x8626f6940E2eb28930eFb4CeF49B2d1F2C9C1199') 
@@ -129,10 +129,10 @@ metamask で確認したアカウントのアドレスが `0x8626f6940E2eb28930e
 > 
 ```
 
-index 1 と 2 の Signer
+* index 1 と 2 の Signer
 
 ```js
-> const s1= (await ethers.getSigners())[1]
+> const addr1= (await ethers.getSigners())[1]
 
 =>
 HardhatEthersSigner {
@@ -152,7 +152,7 @@ HardhatEthersSigner {
   }
 }
 
-> const s2= (await ethers.getSigners())[2]
+> const addr2= (await ethers.getSigners())[2]
 
 =>
 HardhatEthersSigner {
@@ -173,20 +173,20 @@ HardhatEthersSigner {
 }
 ```
 
-Signer s1 がメッセージに署名する
+* Signer addr1 がメッセージに署名する
 
 ```js
-> await s1.signMessage("Hello World")
+> await addr1.signMessage("Hello World")
 
 =>
 '0xdc009b92222e2770cf41436a9969b014dd7881229daa3c9b2e425057363b8d2e638a8f065554383ca5f0c68b1af8a96b2f004356bb1af3feb91d14a8e819303f1c'
 
 ```
 
-s1 が s2 にトランザクションを送信する
+* addr1 が addr2 にトランザクションを送信する（ETH の送金）
 
 ```js
-> let tx = await s1.sendTransaction({ to: s2.address, value: 100000})
+> let tx = await addr1.sendTransaction({ to: addr2.address, value: 100000})
 
 > tx
 =>
@@ -227,18 +227,18 @@ TransactionResponse {
 
 ### Contract
 
-* デプロイしたコントラクトのアドレス `0x5FbDB2315678afecb367f032d93F642f64180aa3` とします
-* Solidity のコントラクトの ABI を `function transfer(address to, uint256 amount)` と `function balanceOf(address account) external view returns (uint256)` とします．
+* デプロイしたコントラクトのアドレスを `0x5FbDB2315678afecb367f032d93F642f64180aa3` とします
+* コントラクトの ABI を `function transfer(address to, uint256 amount)` と `function balanceOf(address account) external view returns (uint256)` とします．
 
 #### コントラクトのデプロイ
 
 `contract = new Contract(address, abi, provider)`
 
 ```js
-> const s0= (await ethers.getSigners())[0]
+> const addr0= (await ethers.getSigners())[0] // コントラクトをデプロイする EOA
 > const contractAddress="0x5FbDB2315678afecb367f032d93F642f64180aa3"
 > const abi = ["function transfer(address to, uint256 amount)"," function balanceOf(address account) external view returns (uint256)"]
-> const contract = new ethers.Contract(contractAddress, abi, s0)
+> const contract = new ethers.Contract(contractAddress, abi, addr0)
 ```
 
 * コントラクトオブジェクトの確認
@@ -280,12 +280,12 @@ Contract {
 * コントラクトオブジェクトへの操作
 
 ```js
-await contract.balanceOf(s0)
+await contract.balanceOf(addr0)
 
 =>
 1000000n
 
-await contract.transfer(s1, 100n)
+await contract.transfer(addr1, 100n)
 
 =>
 ContractTransactionResponse {
@@ -323,10 +323,10 @@ ContractTransactionResponse {
 }
 
 
->  await contract.balanceOf(s0)
+>  await contract.balanceOf(addr0)
 999900n
 
->  await contract.balanceOf(s1)
+>  await contract.balanceOf(addr1)
 100n
 ```
 
@@ -441,21 +441,27 @@ npm install --save-dev @nomicfoundation/hardhat-ignition-ethers
 
 ### hardhat Ignition モジュールの作成
 
-`./ignition/modules` ディレクトリに以下の `Token.js` ファイルを作成します．
+以下の例では，Token というコントラクトをデプロイするものとします．
+
+`./ignition/modules` ディレクトリにデプロイするコントラクトに対応する `Token.js` というファイルを作成します．
 
 ```bash
 nano ignition/modules/Token.js
 ```
 
-```js
-// hardhat ignition プラグインを有効化する
-const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+* hardhat ignition プラグインを有効化する
 
-// buildModule関数でモジュールを作成する
+```js
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+```
+
+* buildModule関数でモジュールを作成する
+   
+```js
 //  第１引数がモジュールの識別名
-//  引数のコールバック関数がモジュール定義の実際の内容
-//   コールバック関数のmはModuleBuilderのインスタンス
-//     
+//  第２引数のコールバック関数がモジュール定義の実際の内容
+//   コールバック関数の引数 m には ModuleBuilder のインスタンスが束縛されます
+
 const TokenModule = buildModule("TokenModule", (m) => {
   const token = m.contract("Token");
 
@@ -471,6 +477,8 @@ module.exports = TokenModule;
 hardhat の ignition コマンドでデプロイすることができます．
 
 デプロイした結果，デプロイしたスマートコントラクトのコントラクトアカウントのアドレスが返ってきます
+
+` --network` の後にはデプロイするネットワークを指定します
 
 ```bash
  npx hardhat ignition deploy ./ignition/modules/Token.js --network localhost
@@ -491,22 +499,33 @@ Deployed Addresses
 TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ```
 
-上記の場合，Token コントラクトのアカウントのアドレスは
+上記の場合，デプロイされた Token コントラクトアカウントのアドレスは
 
 `0x5FbDB2315678afecb367f032d93F642f64180aa3` です
 
-## イベントの捕捉
+## ethers.js を使ったイベントの捕捉
 
-ERC-20 イベントの捕捉の場合
+ERC-20 イベントの捕捉の例で説明します
+
+
+### 監視したいイベントを発出するコントラクトのABI
 
 ```js
-abi = [
-  "event Transfer(address indexed from, address indexed to, uint amount)"
-]
+// ERC-20 ABI の一部（Transfer イベントのみ）
+const erc20Abi = [
+  "event Transfer(address indexed from, address indexed to, uint256 value)"
+];
+```
 
-// コントラクトの生成と Providerへの接続
-contract = new Contract("dai.tokens.ethers.eth", abi, provider)
+### コントラクトの生成
+  
+```js
+const contract = new ethers.Contract(tokenAddress, erc20Abi, provider);
+```
 
+### イベントの監視
+
+```js
 // Transfer イベントの監視開始
 contract.on("Transfer", (from, to, _amount, event) => {
   const amount = formatEther(_amount, 18)
