--- a/ethereum/02. console.md
+++ b/ethereum/02. console.md
@@ -1,6 +1,6 @@
 # 02. Hardhat による Ethereum ブロックチェーンのコンソール操作
 
-最終更新 2025/02/07 
+最終更新 2025/03/09
 Shigeichiro Yamasaki
 
 ## 前提条件
@@ -17,15 +17,9 @@ cd ~/hardhat/tutorial
 npx hardhat node
 ```
 
-* Token.sol コントラクトが Hardhat node にデプロイ済
-
-```bash
-npx hardhat ignition deploy ignition/modules/Token.js --network localhost
-```
-
 ## hardhat console の起動
 
-hardhat console コマンドで node のプロンプトになります
+hardhat console コマンドで node のプロンプトになります (--network の後は接続するネットワーク)
 
 ```bash
 npx hardhat console --network localhost 
@@ -63,31 +57,35 @@ HardhatEthersSigner {
 
 ### コントラクトのデプロイ
 
+ethers.js の deployContract を利用する
+
 ```js
 > const Token = await ethers.deployContract("Token");
 ```
 
 ### トークン残高の確認
 
-状態変数の参照
+Token コントラクトの状態変数を参照する
 
 ```js
 > await Token.balanceOf(owner.address);
 1000000n
 ```
 
-* ノードのログでコントラクトの関数 `Token#balanceOf`  が呼ばれたことが表示される
+* hardhat network のログを確認してください
+* Token コントラクトの関数 `Token#balanceOf`  が呼ばれたことが表示されるはずです
+* 関数の呼び出し元と送信先のアカウントを確認してください
 
 ```js
 eth_call
-  Contract call:           Token#balanceOf
-  From:                    0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
-  To:                      0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+  Contract call:       Token#balanceOf
+  From:                0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266
+  To:                  0x5fbdb2315678afecb367f032d93f642f64180aa3
 ```
 
 ### トークンの送金
 
-hardhat network ノードのログをチェックし，トランザクションの発出などを見ておく
+hardhat network のログをチェックし，トランザクションの発出などを見ておく
 
 ```js
 > await Token.transfer(addr1.address, 50)
@@ -125,49 +123,6 @@ ContractTransactionResponse {
 ### デプロイしたコントラクトの ABI を取得する
 
 * デプロイしたToken コントラクトから ABI を取り出すこともできる
-
-```js
-> Token
-
-=>
-BaseContract {
-  target: '0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512',
-  interface: Interface {
-    fragments: [
-      [ConstructorFragment],
-      [EventFragment],
-      [FunctionFragment],
-      [FunctionFragment],
-      [FunctionFragment],
-      [FunctionFragment],
-      [FunctionFragment],
-      [FunctionFragment]
-    ],
-    deploy: ConstructorFragment {
-      type: 'constructor',
-      inputs: [],
-      payable: false,
-      gas: null
-    },
-    fallback: null,
-    receive: false
-  },
-  runner: HardhatEthersSigner {
-    _gasLimit: 30000000,
-    address: '0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266',
-    provider: HardhatEthersProvider {
-      _hardhatProvider: [LazyInitializationProviderAdapter],
-      _networkName: 'localhost',
-      _blockListeners: [],
-      _transactionHashListeners: Map(0) {},
-      _eventListeners: []
-    }
-  },
-  filters: {},
-  fallback: null,
-  [Symbol(_ethersInternal_contract)]: {}
-}
-```
 
 ```js
 > Token.interface
