バージョンの確認など

--- a/ethereum/03. payable.md
+++ b/ethereum/03. payable.md
@@ -1,6 +1,6 @@
 # 03. Eth を所有可能なコントラクトの作成
 
-2025/02/09
+2025/03/09
 Shigeichiro Yamasaki
 
 ## コントラクトアドレスへのEth 送金を可能にする方法
@@ -174,7 +174,16 @@ cd ~/hardhat/payable
 npx hardhat ignition deploy ignition/modules/EthWallet.js --network localhost
 
 =>
-...
+Hardhat Ignition 🚀
+
+Deploying [ EthWallet ]
+
+Batch #1
+  Executed EthWallet#EthWallet
+
+[ EthWallet ] successfully deployed 🚀
+
+Deployed Addresses
 
 EthWallet#EthWallet - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ```
@@ -193,7 +202,7 @@ npx hardhat console --network localhost
 > const EthWallet = await ethers.deployContract("EthWallet");
 ```
 
-* コントラクトアドレス
+* EthWallet のコントラクトアドレス
 
 ```js
 > const EthWallet_addr = await EthWallet.target;
