ヴァージョン変更

--- a/ethereum/04. ERC20.md
+++ b/ethereum/04. ERC20.md
@@ -1,6 +1,6 @@
 # 04. ERC20 トークンの作成と利用
 
-2025/02/09
+2025/03/16
 Shigeichiro Yamasaki
 
 OpenZeppelin のライブラリを利用した ERC20トークンを処理するコントラクト
@@ -106,19 +106,21 @@ rm ignition/modules/Lock.js
 
 [https://docs.openzeppelin.com/contracts/4.x/erc20](https://docs.openzeppelin.com/contracts/4.x/erc20)
 
+* ライブラリのインストール
+
 ```bash
 yarn add --dev @openzeppelin/contracts
 ```
 
 ## ERC20 コントラクトの作成
 
-* ここでは，仮にトークン名 JPQ とコントラクト名を JPYcoin としますが，好きな名前にしてください
+* ここでは，仮にトークン名 JPQ とコントラクト名を JPYcoin とし，ファイル名を JPYcoin.sol としますが，好きな名前にしてください
 
 ```bash
 nano contracts/JPYcoin.sol
 ```
 
-このコントラクトは、name、symbol、initialSupply（初期供給量）を引数に取り、デプロイ時にトークンの全量をデプロイアドレスにミントします。
+このコントラクトは、name、symbol、initialSupply（初期供給量）を引数に取り、デプロイ時に生成（ミント）したトークンの全量をデプロイしたコントラクト・アドレスの所有にします。
 
 * コントラクトの継承とコンストラクタの間接的初期化
 
@@ -144,9 +146,14 @@ contract JPYcoin is ERC20 {
 
 ```bash
 npx hardhat compile
+
+=>
+Compiled 6 Solidity files successfully (evm target: paris).
 ```
 
 ## JPYcoinコントラクトのテスト
+
+テストプログラムのファイル名を JPYcoin.js とします
 
 ```bash
 nano test/JPYcoin.js
@@ -218,6 +225,8 @@ npx hardhat test
 ```
 
 ### hardhat node の起動
+
+ローカルノードを起動する
 
 ```bash
 npx hardhat node
@@ -367,15 +376,15 @@ pragma solidity ^0.8.0;
 
 // OpenZeppelinの ERC20 ライブラリをインポートする
 import "@openzeppelin/contracts/token/ERC20/ERC20.sol";
-// JPYcoin のインポートする
+// JPYcoin をインポートする
 import "./JPYcoin.sol";
-
+// ERC20トークンを Eth で購入するコントラクト
 contract JPYFaucet {
     JPYcoin public token; // JPYcoin コントラクトのインスタンスを格納する変数
     address public owner; // 所有者のアドレス
     uint256 public rate;  // 1ETH と交換されるトークンの量（交換比率）
 
-    // 初期化時にのデプロイ済のERC20コントラクトと ETH とトークンの交換比率を設定する
+    // 初期化時に ETH と対象コントラクトのトークンの交換比率を設定する
     constructor(uint256 _rate) {
         rate = _rate;
         owner = msg.sender; // コントラクトをデプロイしたアドレスを所有者として設定
