コンソール操作を優先

--- a/ethereum/06. ethers.js.md
+++ b/ethereum/06. ethers.js.md
@@ -2,11 +2,12 @@
 
 ethereum RPC の ラッピングクライアントの使い方
 
-2025/02/20
+2025/03/22
 Shigeichiro Yamasaki
 
 ## 前提条件
 
+05. ERC721.md の続きとして実施する
 * コントラクトを hardhat node にデプロイ済
 * Hardhat console を hardhat node に接続している
 * 以下，hardhat console から実行する
@@ -15,24 +16,17 @@ Shigeichiro Yamasaki
 
 [etheres Documentation (v6)](https://docs.ethers.org/v6/)
 
+## コンソールからの操作
+
+```bash
+npx hardhat console --network localhost 
+```
+
 ## ethers.js のAPI一覧の表示
 
 ```js
 > ethers
 
-=>
-{
-{
-  version: '6.13.5',
-  decodeBytes32String: [Function: decodeBytes32String],
-  encodeBytes32String: [Function: encodeBytes32String],
-  AbiCoder: [class AbiCoder],
-  
-  ...
-
-  deployContract: [Function: bound deployContract] AsyncFunction
-}
-> 
 ```
 
 ## ethers.js の基本要素
@@ -225,20 +219,32 @@ TransactionResponse {
 }
 ```
 
-### Contract
-
-* デプロイしたコントラクトのアドレスを `0x5FbDB2315678afecb367f032d93F642f64180aa3` とします
-* コントラクトの ABI を `function transfer(address to, uint256 amount)` と `function balanceOf(address account) external view returns (uint256)` とします．
-
-#### コントラクトのデプロイ
-
-`contract = new Contract(address, abi, provider)`
+#### 残高の確認
 
 ```js
-> const addr0= (await ethers.getSigners())[0] // コントラクトをデプロイする EOA
-> const contractAddress="0x5FbDB2315678afecb367f032d93F642f64180aa3"
-> const abi = ["function transfer(address to, uint256 amount)"," function balanceOf(address account) external view returns (uint256)"]
-> const contract = new ethers.Contract(contractAddress, abi, addr0)
+> await ethers.provider.getBalance(addr1.address);
+
+=>
+9999999900086328157000n
+
+> await ethers.provider.getBalance(addr2.address);
+
+=>
+10000000000000000300000n
+```
+
+### Contract
+
+
+#### コントラクトのデプロイ(MusicNFTを利用)
+
+```js
+// テスト用アカウント
+> const addr0 = (await ethers.getSigners())[0];
+
+// コントラクトのデプロイ
+> const contract = await ethers.deployContract("MusicNFT",[addr0]);
+
 ```
 
 * コントラクトオブジェクトの確認
@@ -247,13 +253,32 @@ TransactionResponse {
 > contract
 
 =>
-Contract {
-  target: '0x5FbDB2315678afecb367f032d93F642f64180aa3',
+BaseContract {
+  target: '0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9',
   interface: Interface {
-    fragments: [ [FunctionFragment], [FunctionFragment] ],
+    fragments: [
+      [ConstructorFragment], [ErrorFragment],
+      [ErrorFragment],       [ErrorFragment],
+      [ErrorFragment],       [ErrorFragment],
+      [ErrorFragment],       [ErrorFragment],
+      [ErrorFragment],       [ErrorFragment],
+      [ErrorFragment],       [EventFragment],
+      [EventFragment],       [EventFragment],
+      [EventFragment],       [EventFragment],
+      [EventFragment],       [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment],    [FunctionFragment],
+      [FunctionFragment]
+    ],
     deploy: ConstructorFragment {
       type: 'constructor',
-      inputs: [],
+      inputs: [Array],
       payable: false,
       gas: null
     },
@@ -275,6 +300,8 @@ Contract {
   fallback: null,
   [Symbol(_ethersInternal_contract)]: {}
 }
+
+
 ```
 
 * コントラクトオブジェクトへの操作
@@ -322,19 +349,13 @@ ContractTransactionResponse {
   blobVersionedHashes: null
 }
 
-
->  await contract.balanceOf(addr0)
-999900n
-
->  await contract.balanceOf(addr1)
-100n
 ```
 
 ## v5 と v6 
 
 ethers.js のバージョンが v5 から v6 に上がったときの非互換の注意点です
 
-多くのサンプルが v5 ベースなので，相違点を意識しておく必要があります．
+ネット上にある多くのサンプルが v5 ベースなので，相違点を意識しておく必要があります．
 
 v5 では， `ethers.util.*` というように util パッケージだったメソッドが  ルートパッケージで利用できるようになったので， `ethers.*`  となります
 
@@ -441,12 +462,12 @@ npm install --save-dev @nomicfoundation/hardhat-ignition-ethers
 
 ### hardhat Ignition モジュールの作成
 
-以下の例では，Token というコントラクトをデプロイするものとします．
+以下の例では，MusicNFT  というコントラクトをデプロイするものとします．
 
-`./ignition/modules` ディレクトリにデプロイするコントラクトに対応する `Token.js` というファイルを作成します．
+`./ignition/modules` ディレクトリにデプロイするコントラクトに対応する `MusicNFT.js` というファイルを作成します．
 
 ```bash
-nano ignition/modules/Token.js
+nano ignition/modules/MusicNFT.js
 ```
 
 * hardhat ignition プラグインを有効化する
@@ -458,18 +479,20 @@ const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
 * buildModule関数でモジュールを作成する
    
 ```js
+const { buildModule } = require("@nomicfoundation/hardhat-ignition/modules");
+
 //  第１引数がモジュールの識別名
 //  第２引数のコールバック関数がモジュール定義の実際の内容
 //   コールバック関数の引数 m には ModuleBuilder のインスタンスが束縛されます
 
-const TokenModule = buildModule("TokenModule", (m) => {
-  const token = m.contract("Token");
-
-  return { token };
+// モジュール名 MusicNFT
+module.exports = buildModule("MusicNFT", (m) => {
+  // 所有者のアドレス
+  const owner = "0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266";
+  // コントラクト名 MusicNFT
+  const contract = m.contract("MusicNFT", [owner]);
+  return { contract };
 });
-
-module.exports = TokenModule;
-
 ```
 
 ## Hardhat の ignitionコマンドによる Hardhat Network へのデプロイ
@@ -481,7 +504,7 @@ hardhat の ignition コマンドでデプロイすることができます．
 ` --network` の後にはデプロイするネットワークを指定します
 
 ```bash
- npx hardhat ignition deploy ./ignition/modules/Token.js --network localhost
+ npx hardhat ignition deploy ./ignition/modules/MusicNFT.js --network localhost
 
 =>
 
@@ -506,6 +529,18 @@ TokenModule#Token - 0x5FbDB2315678afecb367f032d93F642f64180aa3
 ## ethers.js を使ったイベントの捕捉
 
 ERC-20 イベントの捕捉の例で説明します
+
+* ctrl-c でノードを停止する
+* erc20 のチュートリアルで作成したディレクトリに移動
+
+```bash
+cd ../erc20
+```
+
+* ノードの起動
+
+```bash
+```
 
 
 ### 監視したいイベントを発出するコントラクトのABI
