章立ての変更

--- a/ethereum/04. ERC20.md
+++ b/ethereum/04. ERC20.md
@@ -506,7 +506,7 @@ npx hardhat test
   5 passing (438ms)
 ```
 
-### hardhat ignition によるデプロイモジュールの作成
+## hardhat ignition によるデプロイモジュールの作成
 
 ```bash
 nano ignition/modules/JPYFaucet.js
@@ -524,7 +524,7 @@ module.exports = buildModule("JPYFaucet", (m) => {
 
 ```
 
-### コンソールからの操作
+## コンソールからの操作
 
 * ERC20コントラクトへのコンソール操作の続き
 
@@ -588,7 +588,7 @@ npx hardhat console --network localhost
 99998600000n
 ```
 
-### ローカルノードへのデプロイ
+## ローカルノードへのデプロイ
 
 ```bash
 npx hardhat ignition deploy ignition/modules/JPYFaucet.js --network localhost
