イベント監視の追加

--- a/ethereum/06. ethers.js.md
+++ b/ethereum/06. ethers.js.md
@@ -533,58 +533,93 @@ ERC-20 イベントの捕捉の例で説明します
 * ctrl-c でノードを停止する
 * erc20 のチュートリアルで作成したディレクトリに移動
 
+### erc20の準備
+
+ディレクトリの移動
+
 ```bash
 cd ../erc20
 ```
 
-* ノードの起動
+* hardhat ノードの起動
 
 ```bash
+npx hardhat node
 ```
 
+* コンソールの起動
 
-### 監視したいイベントを発出するコントラクトのABI
+```bash
+npx hardhat console --network localhost 
+```
+
+* コントラクトのデプロイ
 
 ```js
-// ERC-20 ABI の一部（Transfer イベントのみ）
-const erc20Abi = [
-  "event Transfer(address indexed from, address indexed to, uint256 value)"
-];
+> const JPYFaucet = await ethers.deployContract("JPYFaucet",[20]);
+> const JPYcoin = await ethers.deployContract("JPYcoin",[10n**11n]);
 ```
 
-### コントラクトの生成
-  
+* JPYcoin をトークンとして JPYFaucet に設定する
+
 ```js
-const contract = new ethers.Contract(tokenAddress, erc20Abi, provider);
+> await JPYFaucet.setToken(JPYcoin);
 ```
+
+
+* テスト用アドレス
+
+```js
+> const [owner, addr1, addr2] = await ethers.getSigners();
+```
+
+
+
+### ERC20 の標準イベント
+
+* Transfer
+  * トークンが転送されたときにトリガされる．新規トークンを生成したときには  _from アドレスに 0x0 をセットする
+  * `event Transfer(address indexed _from, address indexed _to, uint256 _value)`
+* Approval
+  * approve が成功したときにトリガされる．
+  * `event Approval(address indexed _owner, address indexed _spender, uint256 _value)`
+
 
 ### イベントの監視
 
 ```js
 // Transfer イベントの監視開始
-contract.on("Transfer", (from, to, _amount, event) => {
+JPYcoin.on("Transfer", (from, to, _amount, event) => {
   const amount = formatEther(_amount, 18)
   console.log(`${ from } => ${ to }: ${ amount }`);
   // イベント監視の終了
   event.removeListener();
 });
 
-// Same as above
-contract.on(contract.filters.Transfer, (from, to, amount, event) => {
-  // See above
-})
-
-// Listen for any Transfer to "ethers.eth"
-filter = contract.filters.Transfer("ethers.eth")
-contract.on(filter, (from, to, amount, event) => {
-  // `to` will always be equal to the address of "ethers.eth"
+// Approval イベントの監視開始
+JPYcoin.on("Approval", (owner, spender, value, event) => {
+  const amount = formatEther(value, 18)
+  console.log(`${ owner } => ${ spender }: ${ value }`);
+  // イベント監視の終了
+  event.removeListener();
 });
 
-// Listen for any event, whether it is present in the ABI
-// or not. Since unknown events can be picked up, the
-// parameters are not destructed.
-contract.on("*", (event) => {
-  // The `event.log` has the entire EventLog
-});
 ```
 
+* トークンの送付
+
+```js
+await JPYcoin.transfer(addr1,8000000n);
+```
+
+* ERC20コントラクトからトークン購入コントラクトに対して代理送金を許可する（1000000000トークンまで）
+
+```js
+> await JPYcoin.approve(JPYFaucet,1000000000n);
+```
+
+* トークン購入 (ETH を 20000 wei) 送金
+  
+```js
+> await JPYFaucet.connect(addr1).buyTokens({value: 20000})
+```
