--- a/ethereum/07. HTLC.md
+++ b/ethereum/07. HTLC.md
@@ -1,13 +1,14 @@
 # 07. ethereum でのHTLC
 
-2025/02/08
+2025/03/24
 Shigeichiro Yamasaki
 
 ## HTLCの機能
 
-* 送金者はコントラクトに資金をデポジットする
-* 受領者(receiver) は，ハッシュ値の_preimage を提示すればデポジットされた資金を受け取れる
-* 送金者(sender) は，timelock 時刻以降ならば，デポジットした資金を回収できる
+* 相互に信頼できない送金者(sender)と受領者(receiver)間で安全に支払いを行う方法
+* 送金者は受領者に送金するのではなく，コントラクトに支払いの資金をデポジットする
+* 受領者は，ハッシュ値の_preimage を提示すればデポジットされた資金を受け取れる
+* 送金者は，timelock 時刻以降ならば，デポジットした資金を回収できる
 
 ## hardhat プロジェクトの作成
 
