signet を testnet4に変更

--- a/bitcoin/0.bitcoin-core-testnet4.md
+++ b/bitcoin/0.bitcoin-core-testnet4.md
@@ -1,6 +1,6 @@
-# 0. Bitcoin core Signet ノードの構築
+# 0. Bitcoin core testnet4 ノードの構築
 
-2025/05/09
+2025/05/14
 作成，更新 Shigeichiro Yamasaki 
 
 ## install 方法
@@ -86,20 +86,18 @@ ubuntuでsnapでインストールした場合
 nano ~/snap/bitcoin-core/common/.bitcoin/bitcoin.conf
 ```
 
-★ blockfilterindex=1 を追加（2024/06/07)
-
 ```
-signet=1
+testnet4=1
 txindex=1
 daemon=1
 server=1
 rest=1
-blockfilterindex=1 
-[signet]
+[testnet4]
 rpcuser=hoge
 rpcpassword=hoge
-rpcport=38332
-port=38333
+rpcport=48332
+rpcalloowip=0.0.0.0/0
+port=48333
 fallbackfee=0.00002
 ```
 
@@ -183,10 +181,10 @@ bitcoin-core.cli createwallet alice
 
 ### ワレットの情報が格納されている場所
 
-ubuntuの signet 場合
+ubuntuの testnet4 場合
 
 ```bash
-cd ~/snap/bitcoin-core/common/.bitcoin/signet/wallets
+cd ~/snap/bitcoin-core/common/.bitcoin/testnet4/wallets
 
 ls
 =>
@@ -208,13 +206,13 @@ tb1qa0gknzlqcx2mz54myqvxl8ev3h2w6lswqw4gvj
 
 ## 生成したアドレスへのテスト用コインの入手
 
-生成したアドレスを宛先にしてsignetの bitcoin を受け取ることができます。
+生成したアドレスを宛先にしてtestnet4の bitcoin を受け取ることができます。
 
-以下のURLから signet ネットワークの bitcoin （無料）を入手できます．受け取れる金額は最大で 0.01 BTCです。
+以下のURLから testnet4 ネットワークの bitcoin （無料）を入手できます．
 ただし，同じグローバルIPアドレスからは24時間に1回しか受け取ることができません．
 大学などのネットワーク環境では全員が一つのグローバルIPアドレスを共有しているので，24時間に一人しか受け取ることができません．
 自宅などからトライしてください．
 
-[https://signetfaucet.com/](https://signetfaucet.com/)
+[https://faucet.testnet4.dev/](https://faucet.testnet4.dev/)
 
 
