IBDの強制終了

--- a/bitcoin/0.bitcoin-core-testnet4.md
+++ b/bitcoin/0.bitcoin-core-testnet4.md
@@ -1,6 +1,6 @@
 # 0. Bitcoin core testnet4 ノードの構築
 
-2025/05/14
+2025/05/25
 作成，更新 Shigeichiro Yamasaki 
 
 ## install 方法
@@ -14,9 +14,6 @@
 bitcon coreは「危険なアプリ」という扱いになっています。
 
 * ドラックアンドドロップでアプリフォルダーにインストール
-* アプリを起動してみる（起動しない）
-* 「システム環境設定」の「セキュリティとプライバシー」で，ロックのアイコンをクリックしてパスワード入力
-*  bitcoin coreに対して「ダウンロードしたアプリケーションの実行許可」を与える
 
 #### コマンドラインからの操作を可能にする
 
@@ -30,9 +27,14 @@ brew install bitcoin
 
 #### アプリ起動
 
-「アプリケーションフォルダ」の bitcoin core アプリ起動
+* 「アプリケーションフォルダ」の bitcoin core アプリ起動 （しかし起動しない）
+* 「システム環境設定」の「セキュリティとプライバシー」で，ロックのアイコンをクリックしてパスワード入力
+*  bitcoin coreに対して「ダウンロードしたアプリケーションの実行許可」を与える
 
---
+#### アプリの起動を確認したら終了させる
+
+* bitcoin mainnet の IBDが始まるので，そのままにしておくと 700G 近いディスクが消費されます
+* ファイルメニューから「終了」を選んでアプリを終了させる
 
 ### ubuntu 24.04LTS/の場合
 
@@ -48,6 +50,10 @@ sudo snap install bitcoin-core
 ```bash
 bitcoin-core.daemon
 ```
+
+#### アプリの起動を確認したら終了させる
+
+* bitcoin mainnet の IBDが始まるので，そのままにしておくと 700G 近いディスクが消費されます
 
 `<control>`-c でプロセスを終了させる
 
