ミスの修正

--- a/bitcoin/4.bitcoinrb.md
+++ b/bitcoin/4.bitcoinrb.md
@@ -1,6 +1,6 @@
 # 3. bitcoinrb
 
-2025/05/22
+2025/06/06
 
 Shigeichiro Yamasaki
 
@@ -484,6 +484,7 @@ txid_jiro = to_jiro["txid"]
 
 tx_jiro = bitcoinRPC("gettransaction", [txid_jiro])
 
+tx_jiro
 => 
 {"amount" => -0.001,
  "fee" => -2.82e-06,
