node.js のバージョン変更

--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -2,7 +2,7 @@
 
 Ethereum の開発環境
 
-2025/03/09
+2025/06/17
 Shigeichiro Yamasaki
 
 * [環境のセットアップ](#setup)
@@ -31,7 +31,7 @@ npm install -g yarn
 
 node -v
 =>
-v22.14.0
+v22.16.0
 ```
 * VS code のインストール
 
@@ -49,12 +49,12 @@ source $(brew --prefix nvm)/nvm.sh
 echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
 
-nvm install 22.14.0
+nvm install 22.16.0
 npm install -g yarn
 
 node -v
 =>
-v22.14.0
+v22.16.0
 ```
 
 * VS code のインストール
@@ -138,6 +138,8 @@ Welcome to Hardhat v2.22.5
 
 
 ```
+
+とりあえず，問い合わせに対して enter を押していくだけでよいです．
 
 ### プロジェクトのディレクトリ構成
 
@@ -297,7 +299,7 @@ Compiled 1 Solidity file successfully (evm target: paris).
 artifacts ディレクトリ以下を3階層まで木構造表示させると以下のような構造が見えます
 
 ```bash
- tree artifacts -L 3 
+tree artifacts -L 3 
 
 =>
 artifacts
@@ -364,7 +366,7 @@ and
 * within(開始, 終了) : 開始から終了の間 
 
 ```js
-expect(x).to.equal(2);  		  // xは2に等しい
+expect(x).to.equal(2);  		    // xは2に等しい
 expect(x).to.be.a('string');  	// x はstring型
 expect(x).to.be.an('array');  	// x はarray型
 expect(x).to.include(3);  		// xは3を含む
@@ -395,6 +397,8 @@ expect(x).to.be.false		    // xは false
 
 #### Mocha によるテストの例
 
+以下は assert スタイルの例です
+
 ```js
 describe("べき乗関数 pow", function() {
   it("2の0乗は1", function() {
@@ -410,13 +414,25 @@ describe("べき乗関数 pow", function() {
 
 ```
 
+expect スタイルの場合
+
+```js
+describe("べき乗関数 pow", function() {
+  it("2の0乗は1", function() {
+    expect(math.pow(2, 0)).to.equal(1);
+  });
+  it("2の3乗は8", function() {
+    expect(math.pow(2, 3)).to.equal(8);
+  });
+  it("2の-2乗は0.25", function() {
+    expect(math.pow(2, -2)).to.equal(0.25);
+  });
+});
+```
+
 ### ethers.js (v6系) を使ったコントラクトのデプロイ
 
 * ethers.deployContract 関数
-
-```js
-const contract = await ethers.deployContract(abi, contract,[args])
-```
 
 デプロイするコントラクトのABIやバイトコードと初期値を入れてトランザクション化
 トランザクションをブロードキャストしてコントラクトをデプロイする
@@ -427,6 +443,11 @@ const contract = await ethers.deployContract(abi, contract,[args])
     * コンストラクタの初期値の配列: []
   * 返り値
     *デプロイしたトランザクションのハッシュ値
+  
+```js
+const contract = await ethers.deployContract(abi, contract,[args])
+```
+
 
 ### Hardhat Toolbox の利用
 
