--- a/bitcoin/5.bitcoin-SegWit.md
+++ b/bitcoin/5.bitcoin-SegWit.md
@@ -1,6 +1,6 @@
 # 5. SegWit (Segregated Witness)
 
-2024/06/23 更新 Shigeichiro Yamasaki
+2025/05/18 更新 Shigeichiro Yamasaki
 
 ## segWit トランザクションの構造
 
@@ -22,13 +22,13 @@
 ### script_pubkey の witness program
 
 * script_pubkey が次のパターンのとき，SegWitと判断する
-* 現在のバージョンは0 なので，先頭にバージョンを意味する 0 がプッシュされる
+* 先頭にバージョンを意味する OP_0 がプッシュされる
 * バージョンの後にプッシュされるデータを witness program と呼ぶ
 
 #### P2WPKHの場合
 
 ```
-0 <20バイトのデータ>
+OP_0 <20バイトのデータ>
 ```
 
 この20バイトは，公開鍵のHASH160の値
@@ -36,7 +36,7 @@
 #### P2WSHの場合
 
 ```
-0 <32バイトのデータ>
+OP_0 <32バイトのデータ>
 ```
 
 この32バイトは，redeem script のSHA256ハッシュ
@@ -99,7 +99,7 @@ def bitcoinRPC(method, params)
     JSON.parse(http.request(request).body)["result"]
 end
 
-# output script descriptor のチェックサムの生成／検証プログラム
+# output script descriptor のBCH 符号によるチェックサムの生成／検証プログラム
 
 INPUT_CHARSET = "0123456789()[],'/*abcdefgh@:$%{}IJKLMNOPQRSTUVWXYZ&+-.;<=>?!^_|~ijklmnopqrstuvwxyzABCDEFGH`#\"\\ "
 CHECKSUM_CHARSET = "qpzry9x8gf2tvdw0s3jn54khce6mua7l"
