--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -1,16 +1,11 @@
-# 01. Hardhat のチュートリアル
+# 01. Hardhat 3  のチュートリアル
 
 Ethereum の開発環境
 
-2025/06/17
+2025/08/19
 Shigeichiro Yamasaki
 
-* [環境のセットアップ](#setup)
-* [Hardhat プロジェクトの新規作成](#project)
-* [スマートコントラクトの作成とコンパイル](#compile)
-* [コントラクトのテスト](#test)
-* [Hardhar Networkへのデプロイ](#hhNetwork)
-
+hardhat 3 は，viem という javaScript ライブラリを利用してEVMと対話します．
 
 ##  <a id="setup">環境のセットアップ</a>
 
@@ -31,7 +26,7 @@ npm install -g yarn
 
 node -v
 =>
-v22.16.0
+v22.18.0
 ```
 * VS code のインストール
 
@@ -49,12 +44,12 @@ source $(brew --prefix nvm)/nvm.sh
 echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
 
-nvm install 22.16.0
+nvm install 22.18.0
 npm install -g yarn
 
 node -v
 =>
-v22.16.0
+v22.18.0
 ```
 
 * VS code のインストール
@@ -73,8 +68,8 @@ v22.16.0
 cd ~
 mkdir hardhat
 cd hardhat/
-mkdir tutorial
-cd tutorial
+mkdir hardhat-example
+cd hardhat-example
 ```
 
 * ここでは，プロジェクトルートを hardhat/tutolial という名前のフォルダにしますが，適宜自分のプロジェクト名に修正してください
@@ -94,15 +89,6 @@ init コマンドでプロジェクトのフォルダ群を自動生成します
 また，このパスがプロジェクトの起点となる「プロジェクトルート」になります．
 設定ファイルは，package.json というファイルです．
 
-```bash
-yarn init -y
-```
-
-### Hardhat パッケージモジュールのインストール
-
-```bash
-yarn add --dev hardhat
-```
 
 ### Hardhat の初期化
 
@@ -113,33 +99,39 @@ yarn add --dev hardhat
 プロジェクトルートディレクトリに，空の hardhat.config.js ファイルを作成します．
 
 ```bash
-npx hardhat init
+npx hardhat --init
 ```
+
+このコマンドを実行するとプロンプトが返ってきます
+
+```bash
+Need to install the following packages:
+hardhat@3.0.0
+Ok to proceed? (y) 
+```
+
+y と応えると以下のような表示が出現します
 
 ```bash
 =>
-888    888                      888 888               888
-888    888                      888 888               888
-888    888                      888 888               888
-8888888888  8888b.  888d888 .d88888 88888b.   8888b.  888888
-888    888     "88b 888P"  d88" 888 888 "88b     "88b 888
-888    888 .d888888 888    888  888 888  888 .d888888 888
-888    888 888  888 888    Y88b 888 888  888 888  888 Y88b.
-888    888 "Y888888 888     "Y88888 888  888 "Y888888  "Y888
+ █████  █████                         ███  ███                  ███      ██████
+░░███  ░░███                         ░███ ░███                 ░███     ███░░███
+ ░███   ░███   ██████  ████████   ███████ ░███████    ██████  ███████  ░░░  ░█
+ ░██████████  ░░░░░███░░███░░███ ███░░███ ░███░░███  ░░░░░███░░░███░      ████░
+ ░███░░░░███   ███████ ░███ ░░░ ░███ ░███ ░███ ░███   ███████  ░███      ░░░░███
+ ░███   ░███  ███░░███ ░███     ░███ ░███ ░███ ░███  ███░░███  ░███ ███ ███ ░███
+ █████  █████░░███████ █████    ░░███████ ████ █████░░███████  ░░█████ ░░██
+░░░░░  ░░░░░  ░░░░░░░ ░░░░░      ░░░░░░░ ░░░░ ░░░░░  ░░░░░░░    ░░░░░   ░░░░░░
+ 
+👷 Welcome to Hardhat v3.0.0 👷
 
-Welcome to Hardhat v2.22.5
-
-? What do you want to do? … 
-▸ Create a JavaScript project
-  Create a TypeScript project
-  Create a TypeScript project (with Viem)
-  Create an empty hardhat.config.js
-  Quit
-
-
+? Which version of Hardhat would you like to use? … 
+▸ Hardhat 3 Beta (recommended for new projects)
+  Hardhat 2 (older version)
 ```
 
-とりあえず，問い合わせに対して enter を押していくだけでよいです．
+3 Beta を選択します
+
 
 ### プロジェクトのディレクトリ構成
 
