--- a/ethereum/01. Hardhat.md
+++ b/ethereum/01. Hardhat.md
@@ -723,7 +723,7 @@ contract CounterTest is Test {
 ```
 
 
-### Setupp 関数
+### SetUp 関数
 
 すべてのテストにおいて共通に利用するロジックを事前に行う関数です
 
@@ -767,6 +767,21 @@ npx hardhat test solidity
 ```bash
 npx hardhat test <test-file-1> <test-file-2> ...
 ```
+
+## hardhat で viem を利用する方法
+
+### セットアップ
+
+### ネットワークへの接続
+
+### viem クライアントの利用
+
+
+### コントラクトのデプロイと操作
+
+### viem ベース処理のテストアサーション
+
+
 
 
 
